--- a/src/assets/styles/blocks/elements.styl
+++ b/src/assets/styles/blocks/elements.styl
@@ -48,3 +48,31 @@
 
   &.squared
     border-radius 4px
+
+  svg
+    fill $white
+
+@media (max-width 720px)
+  .btn.medium
+    font-size 18px
+    line-height 30px
+    padding 6px 18px
+
+@media (max-width 550px)
+  .btn.large
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 36px;
+    padding: 7px 30px 8px;
+
+
+@media (max-width 450px)
+  .btn.medium
+    font-size 18px
+    line-height 30px
+    padding 4px 20px 4px
+
+  .btn.large
+    font-size: 20px;
+    letter-spacing 0
+    padding: 7px 20px 8px;
