--- a/src/assets/styles/blocks/wrapper.styl
+++ b/src/assets/styles/blocks/wrapper.styl
@@ -3,10 +3,12 @@
   margin 0 auto
   overflow-x hidden
   width 100%
+  min-width 320px
 
 .base-col
   width 100%
-  max-width 1170px
+  max-width 1200px
+  padding 0 15px
   margin 0 auto
   box-sizing border-box
   clearfix()
