--- a/built/assets/styles/main.css
+++ b/built/assets/styles/main.css
@@ -170,10 +170,12 @@ input[type='submit'] {
   margin: 0 auto;
   overflow-x: hidden;
   width: 100%;
+  min-width: 320px;
 }
 .base-col {
   width: 100%;
-  max-width: 1170px;
+  max-width: 1200px;
+  padding: 0 15px;
   margin: 0 auto;
   box-sizing: border-box;
 }
@@ -231,6 +233,36 @@ input[type='submit'] {
 }
 .btn.squared {
   border-radius: 4px;
+}
+.btn svg {
+  fill: #fff;
+}
+@media (max-width: 720px) {
+  .btn.medium {
+    font-size: 18px;
+    line-height: 30px;
+    padding: 6px 18px;
+  }
+}
+@media (max-width: 550px) {
+  .btn.large {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 36px;
+    padding: 7px 30px 8px;
+  }
+}
+@media (max-width: 450px) {
+  .btn.medium {
+    font-size: 18px;
+    line-height: 30px;
+    padding: 4px 20px 4px;
+  }
+  .btn.large {
+    font-size: 20px;
+    letter-spacing: 0;
+    padding: 7px 20px 8px;
+  }
 }
 .section {
   padding: 44px 0 10px;
@@ -348,9 +380,66 @@ input[type='submit'] {
 .contacts .contacts-text p {
   padding-bottom: 24px;
 }
+@media (max-width: 1100px) {
+  .contacts .contacts-text {
+    width: 485px;
+  }
+  .section-partners {
+    margin: 0 -24px;
+  }
+  .section-partners li {
+    margin: 0 24px;
+  }
+}
+@media (max-width: 1000px) {
+  .section-partners {
+    margin: 0 -12px;
+  }
+  .section-partners li {
+    margin: 0 12px;
+  }
+  .contacts .contacts-text {
+    width: 400px;
+  }
+}
+@media (max-width: 720px) {
+  .section-statistic li span {
+    font-size: 60px;
+  }
+  .section-statistic li p {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+@media (max-width: 600px) {
+  .section-statistic li p {
+    width: 100%;
+    font-size: 14px;
+    line-height: 20px;
+  }
+}
+@media (max-width: 550px) {
+  .section-head {
+    margin-bottom: 18px;
+  }
+  .section-headline {
+    font: 600 30px/36px 'PT Sans Narrow';
+  }
+  .section-statistic {
+    margin: 0 -10px 40px;
+  }
+  .section-description {
+    margin: 12px 0 0px;
+    font-size: 18px;
+    line-height: 20px;
+  }
+  .contacts .contacts-text {
+    width: 100%;
+  }
+}
 .list-items {
   font-size: 0;
-  margin-bottom: 20px;
+  margin: 0 -5px 20px;
 }
 .list-items.within-buttons .list-description {
   min-height: 168px;
@@ -419,6 +508,7 @@ input[type='submit'] {
   display: inline-block;
   vertical-align: middle;
   padding-left: 16px;
+  width: calc(100% - 120px);
 }
 .list-icons li i {
   display: inline-block;
@@ -462,10 +552,11 @@ input[type='submit'] {
   font-size: 0;
   text-align: center;
   padding-top: 10px;
+  margin: 0 -20px;
 }
 .list-images li {
   display: inline-block;
-  margin: 0 24px;
+  margin: 0 20px;
   overflow: hidden;
   border-radius: 6px;
   border: 6px solid #831f81;
@@ -639,6 +730,97 @@ input[type='submit'] {
   height: 100%;
   display: inline-block;
 }
+.list-slider-full .slick-prev {
+  left: 20px;
+}
+.list-slider-full .slick-next {
+  right: 20px;
+}
+@media (max-width: 1100px) {
+  .list-items .list-image {
+    height: 240px;
+  }
+  .list-images {
+    margin: 0 -10px;
+  }
+  .list-images li {
+    width: calc(25% - 32px);
+    margin: 0 10px;
+  }
+  .list-images li img {
+    width: 100%;
+  }
+}
+@media (max-width: 1000px) {
+  .list-items .list-image {
+    height: 200px;
+  }
+}
+@media (max-width: 800px) {
+  .list-items .list-image {
+    height: 160px;
+  }
+}
+@media (max-width: 720px) {
+  .list-items {
+    margin-bottom: 10px;
+  }
+  .list-items .list-item {
+    font-size: 15px;
+    margin-bottom: 10px;
+    width: 50%;
+  }
+  .list-items .list-button {
+    margin: 10px 0;
+  }
+  .list-items .list-main-button {
+    margin-top: 10px;
+  }
+  .list-items.within-buttons .list-description {
+    min-height: auto;
+  }
+  .list-icons li {
+    font-size: 16px;
+    line-height: 25px;
+    width: 100%;
+  }
+  .list-images {
+    margin-bottom: -20px;
+  }
+  .list-images li {
+    width: calc(50% - 40px);
+    margin-bottom: 20px;
+  }
+  .list-questions .list-questions-question {
+    font-size: 16px;
+  }
+  .list-reviews {
+    margin-bottom: -20px;
+  }
+  .list-reviews > li {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 550px) {
+  .list-items {
+    margin-bottom: 10px;
+  }
+  .list-items .list-item {
+    font-size: 15px;
+    margin-bottom: 10px;
+    width: 100%;
+  }
+  .list-items .list-image {
+    height: 220px;
+  }
+  .list-slider-full .slick-prev {
+    left: 10px;
+  }
+  .list-slider-full .slick-next {
+    right: 10px;
+  }
+}
 .form-wide {
   width: 100%;
   display: block;
@@ -703,6 +885,19 @@ input[type='submit'] {
 .input.grey:focus {
   border: 1px solid #831f81;
 }
+@media (max-width: 720px) {
+  .form-wide {
+    padding: 30px 0;
+  }
+  .form-wide .form-wide-item {
+    width: 100%;
+    margin-bottom: 12px;
+  }
+  .input {
+    font-size: 15px;
+    padding: 4px 16px;
+  }
+}
 .popup_active {
   overflow: hidden;
 }
@@ -720,17 +915,21 @@ input[type='submit'] {
   z-index: 1;
   top: 20px;
   right: 20px;
-  background-image: url("../images/design/sprite.png");
-  background-size: 236.5px 165.5px;
-  background-position: -175px -92.5px;
-  width: 18px;
-  height: 18px;
   cursor: pointer;
   opacity: 1;
   transition: opacity 0.2s;
 }
 .closePopup:hover {
   opacity: 0.75;
+}
+.closePopup:before {
+  content: '';
+  display: inline-block;
+  background-image: url("../images/design/sprite.png");
+  background-size: 236.5px 165.5px;
+  background-position: -175px -92.5px;
+  width: 18px;
+  height: 18px;
 }
 .popup--wrapper {
   background: #fff;
@@ -740,13 +939,13 @@ input[type='submit'] {
   left: 50%;
   text-outline: 50%;
   will-change: transform;
-  transform: translate(-2500px, -50%);
+  transform: translate(calc(-100% - 2000px), -50%);
   background: #fff;
   padding: 40px 50px;
-  width: 100%;
+  width: calc(100% - 50px);
   max-width: 800px;
   max-height: 100vh;
-  overflow-y: scroll;
+  overflow: hidden;
   box-sizing: border-box;
   border-radius: 24px;
   transition: transform 0.3s;
@@ -755,6 +954,15 @@ input[type='submit'] {
   width: calc(100vw - 50px);
   max-width: none;
   padding: 0;
+}
+.popup--wrapper.full .closePopup {
+  width: 40px;
+  height: 40px;
+  background: #fff;
+  border-radius: 50%;
+  text-align: center;
+  padding-top: 12px;
+  box-sizing: border-box;
 }
 .popup--wrapper.popupOpened {
   transform: translate(-50%, -50%);
@@ -778,6 +986,34 @@ input[type='submit'] {
 .popup-form .btn {
   width: 100%;
   margin-bottom: 18px;
+}
+@media (max-width: 720px) {
+  .popup--wrapper {
+    width: 100%;
+    padding: 12px 18px;
+    border-radius: 0;
+    height: 100vh;
+  }
+  .popup-head {
+    font-size: 15px;
+    margin-bottom: 12px;
+  }
+  .popup-head .section-headline {
+    margin-bottom: 12px;
+  }
+}
+@media (max-width: 720px) {
+  .popup--wrapper.full,
+  .list-slider-full,
+  .list-slider-full > div {
+    width: 100vw;
+    height: 300px;
+  }
+}
+@media (max-width: 550px) {
+  .closePopup {
+    right: 10px;
+  }
 }
 .main-header {
   padding: 14px 0;
@@ -810,6 +1046,7 @@ input[type='submit'] {
 .main-header .main-headline,
 .main-header .main-phones,
 .main-header .main-order-call,
+.main-header .main-order-call-mobile,
 .main-header .main-language {
   display: inline-block;
   vertical-align: middle;
@@ -818,6 +1055,14 @@ input[type='submit'] {
 .main-header .main-order-call,
 .main-header .main-language {
   margin-left: 12px;
+}
+.main-header .main-order-call-mobile {
+  display: none;
+  padding: 10px;
+}
+.main-header .main-order-call-mobile svg {
+  width: 20px;
+  padding: 0;
 }
 .main-header .main-logo {
   background-image: url("../images/design/sprite.png");
@@ -837,6 +1082,10 @@ input[type='submit'] {
   line-height: 26px;
   letter-spacing: -1px;
 }
+.main-header .main-phones a {
+  color: #000;
+  text-decoration: none;
+}
 .main-header .main-language {
   font: 600 16px 'PT Sans Narrow';
   letter-spacing: -0.5px;
@@ -850,7 +1099,9 @@ input[type='submit'] {
 }
 .main-slider {
   width: 100%;
-  height: calc(100vh - 99px);
+  height: calc(100vh - 200px);
+  min-height: 700px;
+  max-height: 1000px;
   position: relative;
   margin-bottom: 0 !important;
 }
@@ -890,7 +1141,7 @@ input[type='submit'] {
 .main-info .main-info-headline {
   font: 600 54px 'PT Sans Narrow';
   letter-spacing: -0.25px;
-  line-height: 72px;
+  line-height: 70px;
   margin-bottom: 20px;
 }
 .main-info .main-info-headline .main-info-price {
@@ -903,6 +1154,112 @@ input[type='submit'] {
 .main-info .main-info-description {
   font-size: 24px;
   margin-bottom: 24px;
+}
+@media (max-width: 1000px) {
+  .main-slider {
+    min-height: 550px;
+    max-height: 900px;
+  }
+  .main-info {
+    width: calc(100% - 30px);
+    max-width: 485px;
+    top: 160px;
+    padding: 24px 40px;
+  }
+  .main-info .main-info-headline {
+    font: 600 44px 'PT Sans Narrow';
+    letter-spacing: -0.25px;
+    line-height: 54px;
+    margin-bottom: 18px;
+  }
+  .main-info .main-info-headline .main-info-price {
+    font-size: 80px;
+    top: -6px;
+  }
+  .main-info .main-info-description {
+    font-size: 20px;
+    margin-bottom: 18px;
+  }
+}
+@media (max-width: 800px) {
+  .main-slider {
+    min-height: 550px;
+    max-height: 700px;
+  }
+}
+@media (max-width: 720px) {
+  .main-header {
+    padding: 0;
+  }
+  .main-header .main-logo {
+    margin-right: 0;
+    transform: scale(0.7);
+  }
+  .main-header .main-headline {
+    display: none;
+  }
+  .main-header .main-phones {
+    font-size: 20px;
+    line-height: 22px;
+  }
+}
+@media (max-width: 550px) {
+  .main-info {
+    padding: 12px 18px;
+  }
+  .main-info .main-info-headline {
+    font-size: 36px;
+    line-height: 44px;
+    margin-bottom: 8px;
+  }
+  .main-info .main-info-headline .main-info-price {
+    font-size: 60px;
+    top: -2px;
+  }
+  .main-info {
+    top: 110px;
+  }
+  .main-slider {
+    min-height: 480px;
+  }
+}
+@media (max-width: 450px) {
+  .main-header .main-order-call,
+  .main-header .main-language,
+  .main-header .main-order-call-mobile {
+    margin-left: 8px;
+  }
+  .main-header .main-phones {
+    margin-left: 0;
+  }
+  .main-header .main-header-left {
+    margin-left: -18px;
+    margin-right: -20px;
+  }
+  .main-header .main-logo {
+    margin-right: 0;
+    transform: scale(0.6);
+  }
+  .main-header .main-order-call {
+    display: none;
+  }
+  .main-header .main-order-call-mobile {
+    display: inline-block;
+  }
+  .main-info .main-info-headline {
+    font-size: 32px;
+    line-height: 42px;
+    margin-bottom: 8px;
+  }
+  .main-info .main-info-description {
+    font-size: 18px;
+    margin-bottom: 12px;
+    line-height: 24px;
+  }
+  .main-slider {
+    min-height: 420px;
+    max-height: 460px;
+  }
 }
 footer.footer {
   padding: 55px 0;
@@ -922,4 +1279,18 @@ footer.footer .footer-social .fb {
   background-position: -175px -63.5px;
   width: 28px;
   height: 28px;
+}
+@media (max-width: 800px) {
+  footer.footer .footer-copyrighth {
+    width: 600px;
+  }
+}
+@media (max-width: 550px) {
+  footer.footer .footer-copyrighth,
+  footer.footer .footer-social {
+    float: none;
+  }
+  footer.footer .footer-social {
+    text-align: center;
+  }
 }
