--- a/src/assets/styles/blocks/forms.styl
+++ b/src/assets/styles/blocks/forms.styl
@@ -52,3 +52,15 @@
 
     &:focus
       border 1px solid $violet
+
+@media (max-width 720px)
+  .form-wide
+    padding 30px 0
+
+    .form-wide-item
+      width 100%
+      margin-bottom 12px
+
+  .input
+    font-size 15px
+    padding 4px 16px
