--- a/src/assets/styles/blocks/popup.styl
+++ b/src/assets/styles/blocks/popup.styl
@@ -15,13 +15,17 @@
   z-index 1
   top 20px
   right 20px
-  sprite($s-close)
   cursor pointer
   opacity 1
   transition opacity .2s
 
   &:hover
     opacity .75
+
+  &:before
+    content ''
+    display inline-block
+    sprite($s-close)
 
 
 .popup--wrapper
@@ -32,13 +36,13 @@
   left 50%
   text-outline 50%
   will-change transform
-  transform translate(-2500px, -50%)
+  transform translate(calc(-100% - 2000px), -50%)
   background #fff
   padding 40px 50px
-  width 100%
+  width calc(100% - 50px)
   max-width 800px
   max-height 100vh
-  overflow-y scroll
+  overflow hidden
   box-sizing border-box
   border-radius 24px
   transition transform .3s
@@ -48,6 +52,15 @@
     width calc(100vw - 50px)
     max-width none
     padding 0
+
+    .closePopup
+      width: 40px;
+      height: 40px;
+      background: #fff;
+      border-radius: 50%;
+      text-align: center;
+      padding-top: 12px;
+      box-sizing: border-box;
 
   &.popupOpened
     transform translate(-50%, -50%)
@@ -70,3 +83,28 @@
   .input, .btn
     width 100%
     margin-bottom 18px
+
+@media (max-width 720px)
+  .popup--wrapper
+    width 100%
+    padding 12px 18px
+    border-radius 0
+    height 100vh
+
+  .popup-head
+    font-size 15px
+    margin-bottom 12px
+
+    .section-headline
+      margin-bottom 12px
+
+@media (max-width 720px)
+  .popup--wrapper.full,
+  .list-slider-full,
+  .list-slider-full > div
+    width 100vw
+    height 300px
+
+@media (max-width 550px)
+  .closePopup
+    right 10px
