--- a/src/assets/styles/blocks/section.styl
+++ b/src/assets/styles/blocks/section.styl
@@ -115,3 +115,60 @@
 
     p
       padding-bottom 24px
+
+
+@media (max-width 1100px)
+  .contacts
+    .contacts-text
+      width 485px
+
+  .section-partners
+    margin 0 -24px
+    li
+      margin 0 24px
+
+@media (max-width 1000px)
+  .section-partners
+    margin 0 -12px
+    li
+      margin 0 12px
+
+  .contacts
+    .contacts-text
+      width 400px
+
+@media (max-width 720px)
+  .section-statistic
+    li
+      span
+        font-size 60px
+
+      p
+        font-size 16px
+        line-height 20px
+
+@media (max-width 600px)
+  .section-statistic
+    li
+      p
+        width 100%
+        font-size 14px
+        line-height 20px
+
+@media (max-width 550px)
+  .section-head
+    margin-bottom 18px
+
+  .section-headline
+    font 600 30px/36px 'PT Sans Narrow'
+
+  .section-statistic
+    margin 0 -10px 40px
+
+  .section-description
+    margin 12px 0 0px
+    font-size 18px
+    line-height 20px
+
+  .contacts .contacts-text
+    width 100%
