--- a/src/assets/styles/blocks/popup.styl
+++ b/src/assets/styles/blocks/popup.styl
@@ -97,8 +97,8 @@
 
     .section-headline
       margin-bottom 12px
+      padding 0 20px
 
-@media (max-width 720px)
   .popup--wrapper.full,
   .list-slider-full,
   .list-slider-full > div
