--- a/src/assets/styles/common/base.styl
+++ b/src/assets/styles/common/base.styl
@@ -1,3 +1,6 @@
+html, body
+  height 100%
+
 html
   -webkit-text-size-adjust none
   min-height 100%
@@ -30,3 +33,9 @@ input[type='submit']
   -webkit-appearance none
   -moz-appearance none
   appearance none
+
+
+.slick-slider,
+.slick-list,
+.slick-track
+  height 100%
