--- a/src/assets/styles/blocks/header.styl
+++ b/src/assets/styles/blocks/header.styl
@@ -37,7 +37,7 @@
   .main-order-call-mobile
     display none
     height 20px
-    padding 10px
+    padding 9px 10px 11px
     svg
       width 20px
       padding 0
@@ -228,5 +228,5 @@
       line-height 24px
 
   .main-slider
-    min-height 420px
-    max-height 460px
+    height 420px
+    min-height auto
