--- a/built/assets/styles/main.css
+++ b/built/assets/styles/main.css
@@ -419,6 +419,16 @@ input[type='submit'] {
     font-size: 16px;
     line-height: 20px;
   }
+  .contacts .contacts-text {
+    width: 100%;
+    padding: 0;
+    text-align: center;
+    height: auto;
+    position: relative;
+  }
+  .contacts #map {
+    display: none;
+  }
 }
 @media (max-width: 600px) {
   .section-statistic li p {
@@ -441,9 +451,6 @@ input[type='submit'] {
     margin: 12px 0 0px;
     font-size: 18px;
     line-height: 20px;
-  }
-  .contacts .contacts-text {
-    width: 100%;
   }
 }
 .list-items {
@@ -1001,7 +1008,7 @@ input[type='submit'] {
     width: 100%;
     padding: 12px 18px;
     border-radius: 0;
-    height: 100vh;
+    height: 100%;
   }
   .popup-head {
     font-size: 15px;
@@ -1014,7 +1021,7 @@ input[type='submit'] {
   .popup--wrapper.full,
   .list-slider-full,
   .list-slider-full > div {
-    width: 100vw;
+    width: 100%;
     height: 300px;
   }
 }
@@ -1067,7 +1074,7 @@ input[type='submit'] {
 .main-header .main-order-call-mobile {
   display: none;
   height: 20px;
-  padding: 10px;
+  padding: 9px 10px 11px;
 }
 .main-header .main-order-call-mobile svg {
   width: 20px;
@@ -1266,8 +1273,8 @@ input[type='submit'] {
     line-height: 24px;
   }
   .main-slider {
-    min-height: 420px;
-    max-height: 460px;
+    height: 420px;
+    min-height: auto;
   }
 }
 footer.footer {
@@ -1294,10 +1301,18 @@ footer.footer .footer-social .fb {
     width: 600px;
   }
 }
-@media (max-width: 550px) {
+@media (max-width: 720px) {
+  footer.footer {
+    padding: 30px 0;
+  }
   footer.footer .footer-copyrighth,
   footer.footer .footer-social {
     float: none;
+  }
+  footer.footer .footer-copyrighth {
+    width: 100%;
+    font-size: 14px;
+    text-align: center;
   }
   footer.footer .footer-social {
     text-align: center;
