--- a/src/assets/styles/blocks/footer.styl
+++ b/src/assets/styles/blocks/footer.styl
@@ -17,11 +17,18 @@ footer.footer
   footer.footer .footer-copyrighth
     width 600px
 
-@media (max-width 550px)
+@media (max-width 720px)
   footer.footer
+    padding 30px 0
+
     .footer-copyrighth,
     .footer-social
       float none
+
+    .footer-copyrighth
+      width 100%
+      font-size 14px
+      text-align center
 
     .footer-social
       text-align center
