--- a/src/assets/styles/blocks/popup.styl
+++ b/src/assets/styles/blocks/popup.styl
@@ -89,7 +89,7 @@
     width 100%
     padding 12px 18px
     border-radius 0
-    height 100vh
+    height 100%
 
   .popup-head
     font-size 15px
@@ -102,7 +102,7 @@
   .popup--wrapper.full,
   .list-slider-full,
   .list-slider-full > div
-    width 100vw
+    width 100%
     height 300px
 
 @media (max-width 550px)
