--- a/src/assets/styles/blocks/section.styl
+++ b/src/assets/styles/blocks/section.styl
@@ -147,6 +147,17 @@
         font-size 16px
         line-height 20px
 
+  .contacts
+    .contacts-text
+      width 100%
+      padding 0
+      text-align center
+      height auto
+      position relative
+
+    #map
+      display none
+
 @media (max-width 600px)
   .section-statistic
     li
@@ -169,6 +180,3 @@
     margin 12px 0 0px
     font-size 18px
     line-height 20px
-
-  .contacts .contacts-text
-    width 100%
