--- a/src/assets/styles/blocks/popup.styl
+++ b/src/assets/styles/blocks/popup.styl
@@ -87,9 +87,9 @@
 @media (max-width 720px)
   .popup--wrapper
     width 100%
-    padding 12px 18px
+    padding 50px 18px 12px
     border-radius 0
-    height 100%
+    height calc(100% + 50px)
 
   .popup-head
     font-size 15px
